--- a/OrderingFoodSystem/Views/Shared/_templateCreate.cshtml
+++ b/OrderingFoodSystem/Views/Shared/_templateCreate.cshtml
@@ -60,8 +60,8 @@
 				<div class="top-menu">
 					<ul>
 						<!--<li class="active"><a href="#Home" class="scroll">Home</a></li>|-->
-						<li>@Html.ActionLink("Home", "Index", "Consumers")</li>
-						<li><a href="restaurants.html">Popular Restaurants</a></li>|
+						<li>@Html.ActionLink("Home", "Index", "Home")</li>
+						<li>@Html.ActionLink("Popular Restaurants", "Index", "Restaurantls")</li>|
 						<li><a href="order.html">Order</a></li>|
 						<li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 						<!--<li><a href="contact.html">contact</a></li> -->
@@ -70,8 +70,8 @@
 				</div>
 				<div class="login-section">
 					<ul>
-						<li><a href="login.html">Login</a>  </li> |
-						<li class="active">@Html.ActionLink("Register", "Create", "Consumers")</li>
+						<li>@Html.ActionLink("Login", "Login", "Home")</li>|
+						<li class="active">@Html.ActionLink("Register", "Register", "Home")</li>
 						<!--<li><a href="register.html">Register</a> </li> |-->
 						<!--<li><a href="#">Help</a></li>-->
 						<div class="clearfix"></div>
