--- a/OrderingFoodSystem/Views/Home/Index.cshtml
+++ b/OrderingFoodSystem/Views/Home/Index.cshtml
@@ -5,9 +5,10 @@
 }
 <div class="login-section">
 	<ul>
-		<li><a href="login.html">Login</a>  </li> |
-		<li><a href="register.html">Register</a> </li> |
-		<li><a href="#">Help</a></li>
+		<li>@Html.ActionLink("Login", "Login", "Home")</li>|
+		<li class="active">@Html.ActionLink("Register", "Register", "Home")</li>
+		<!--<li><a href="register.html">Register</a> </li> |-->
+		<!--<li><a href="#">Help</a></li>-->
 		<div class="clearfix"></div>
 	</ul>
 </div>
@@ -43,13 +44,7 @@
 			</div>
 			
 
-			<div class="main-search">
-				<form action="search.html">
-					<input type="text" value="Search" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Search';}" class="text" />
-					<input type="submit" value="" />
-				</form>
-				<div class="close"><img src="images/cross.png" /></div>
-			</div>
+			
 			<div class="srch"><button></button></div>
 			<script type="text/javascript">
 				$('.main-search').hide();
@@ -126,7 +121,7 @@
 						<li>
 							<div class="offer">
 								<div class="offer-image">
-									<img src="images/p1.jpg" class="img-responsive" alt="" />
+									<img src="@Url.Content("~/Content/mytemplate/")images/p1.jpg" class="img-responsive" alt="" />
 								</div>
 								<div class="offer-text">
 									<h4>Olister Combo pack lorem</h4>
@@ -140,7 +135,7 @@
 						<li>
 							<div class="offer">
 								<div class="offer-image">
-									<img src="images/p2.jpg" class="img-responsive" alt="" />
+									<img src="@Url.Content("~/Content/mytemplate/")images/p2.jpg" class="img-responsive" alt="" />
 								</div>
 								<div class="offer-text">
 									<h4>Chicken Jumbo pack lorem</h4>
@@ -154,7 +149,7 @@
 						<li>
 							<div class="offer">
 								<div class="offer-image">
-									<img src="images/p1.jpg" class="img-responsive" alt="" />
+									<img src="@Url.Content("~/Content/mytemplate/")images/p1.jpg" class="img-responsive" alt="" />
 								</div>
 								<div class="offer-text">
 									<h4>Crab Combo pack lorem</h4>
@@ -169,7 +164,7 @@
 						<li>
 							<div class="offer">
 								<div class="offer-image">
-									<img src="images/p2.jpg" class="img-responsive" alt="" />
+									<img src="@Url.Content("~/Content/mytemplate/")images/p2.jpg" class="img-responsive" alt="" />
 								</div>
 								<div class="offer-text">
 									<h4>Chicken Jumbo pack lorem</h4>
@@ -224,22 +219,22 @@
 				<div class="top-restaurent-grids">
 					<div class="top-restaurent-logos">
 						<div class="res-img-1 wow bounceIn" data-wow-delay="0.4s">
-							<img src="images/restaurent-1.jpg" class="img-responsive" alt="" />
+							<img src="@Url.Content("~/Content/mytemplate/")images/restaurent-1.jpg" class="img-responsive" alt="" />
 						</div>
 						<div class="res-img-2 wow bounceIn" data-wow-delay="0.4s">
-							<img src="images/restaurent-2.jpg" class="img-responsive" alt="" />
+							<img src="@Url.Content("~/Content/mytemplate/")images/restaurent-2.jpg" class="img-responsive" alt="" />
 						</div>
 						<div class="res-img-1 wow bounceIn" data-wow-delay="0.4s">
-							<img src="images/restaurent-3.jpg" class="img-responsive" alt="" />
+							<img src="@Url.Content("~/Content/mytemplate/")images/restaurent-3.jpg" class="img-responsive" alt="" />
 						</div>
 						<div class="res-img-2 wow bounceIn" data-wow-delay="0.4s">
-							<img src="images/restaurent-4.jpg" class="img-responsive" alt="" />
+							<img src="@Url.Content("~/Content/mytemplate/")images/restaurent-4.jpg" class="img-responsive" alt="" />
 						</div>
 						<div class="res-img-1 nth-grid1 wow bounceIn" data-wow-delay="0.4s">
-							<img src="images/restaurent-5.jpg" class="img-responsive" alt="" />
+							<img src="@Url.Content("~/Content/mytemplate/")images/restaurent-5.jpg" class="img-responsive" alt="" />
 						</div>
 						<div class="res-img-2 nth-grid1 wow bounceIn" data-wow-delay="0.4s">
-							<img src="images/restaurent-6.jpg" class="img-responsive" alt="" />
+							<img src="@Url.Content("~/Content/mytemplate/")images/restaurent-6.jpg" class="img-responsive" alt="" />
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -251,35 +246,35 @@
 				</div>
 				<div class="top-cuisine-grids">
 					<div class="top-cuisine-grid wow bounceIn" data-wow-delay="0.4s">
-						<a href=""><img src="images/cuisine1.jpg" class="img-responsive" alt="" /> </a>
+						<a href=""><img src="@Url.Content("~/Content/mytemplate/")images/cuisine1.jpg" class="img-responsive" alt="" /> </a>
 						<label>Cuisine Name</label>
 					</div>
 					<div class="top-cuisine-grid wow bounceIn" data-wow-delay="0.4s">
-						<a href=""><img src="images/cuisine2.jpg" class="img-responsive" alt="" /> </a>
+						<a href=""><img src="@Url.Content("~/Content/mytemplate/")images/cuisine2.jpg" class="img-responsive" alt="" /> </a>
 						<label>Cuisine Name</label>
 					</div>
 					<div class="top-cuisine-grid wow bounceIn" data-wow-delay="0.4s">
-						<a href=""><img src="images/cuisine3.jpg" class="img-responsive" alt="" /> </a>
+						<a href=""><img src="@Url.Content("~/Content/mytemplate/")images/cuisine3.jpg" class="img-responsive" alt="" /> </a>
 						<label>Cuisine Name</label>
 					</div>
 					<div class="top-cuisine-grid nth-grid wow bounceIn" data-wow-delay="0.4s">
-						<a href=""><img src="images/cuisine4.jpg" class="img-responsive" alt="" /> </a>
+						<a href=""><img src="@Url.Content("~/Content/mytemplate/")images/cuisine4.jpg" class="img-responsive" alt="" /> </a>
 						<label>Cuisine Name</label>
 					</div>
 					<div class="top-cuisine-grid nth-grid1 wow bounceIn" data-wow-delay="0.4s">
-						<a href=""><img src="images/cuisine5.jpg" class="img-responsive" alt="" /> </a>
+						<a href=""><img src="@Url.Content("~/Content/mytemplate/")images/cuisine5.jpg" class="img-responsive" alt="" /> </a>
 						<label>Cuisine Name</label>
 					</div>
 					<div class="top-cuisine-grid nth-grid1 wow bounceIn" data-wow-delay="0.4s">
-						<a href=""><img src="images/cuisine6.jpg" class="img-responsive" alt="" /> </a>
+						<a href=""><img src="@Url.Content("~/Content/mytemplate/")images/cuisine6.jpg" class="img-responsive" alt="" /> </a>
 						<label>Cuisine Name</label>
 					</div>
 					<div class="top-cuisine-grid nth-grid1 wow bounceIn" data-wow-delay="0.4s">
-						<a href=""><img src="images/cuisine7.jpg" class="img-responsive" alt="" /> </a>
+						<a href=""><img src="@Url.Content("~/Content/mytemplate/")images/cuisine7.jpg" class="img-responsive" alt="" /> </a>
 						<label>Cuisine Name</label>
 					</div>
 					<div class="top-cuisine-grid nth-grid nth-grid1 wow bounceIn" data-wow-delay="0.4s">
-						<a href=""><img src="images/cuisine8.jpg" class="img-responsive" alt="" /> </a>
+						<a href=""><img src="@Url.Content("~/Content/mytemplate/")images/cuisine8.jpg" class="img-responsive" alt="" /> </a>
 						<label>Cuisine Name</label>
 					</div>
 					<div class="clearfix"></div>
@@ -310,7 +305,7 @@
 						</ul>
 					</div>
 					<div class="col-md-5 service-section-top-row-grid3">
-						<img src="images/lunch.png" class="img-responsive" alt="" />
+						<img src="@Url.Content("~/Content/mytemplate/")images/lunch.png" class="img-responsive" alt="" />
 					</div>
 					<div class="col-md-2 service-section-top-row-grid4 wow swing animated" data-wow-delay="0.4s">
 						<a href="order.html"><input type="submit" value="Order Now"></a>
@@ -323,7 +318,7 @@
 			<div class="container">
 				<div class="col-md-4 service-section-bottom-grid wow bounceIn " data-wow-delay="0.2s">
 					<div class="icon">
-						<img src="images/icon1.jpg" class="img-responsive" alt="" />
+						<img src="@Url.Content("~/Content/mytemplate/")images/icon1.jpg" class="img-responsive" alt="" />
 					</div>
 					<div class="icon-data">
 						<h4>100% Service Guarantee</h4>
@@ -333,7 +328,7 @@
 				</div>
 				<div class="col-md-4 service-section-bottom-grid wow bounceIn " data-wow-delay="0.2s">
 					<div class="icon">
-						<img src="images/icon2.jpg" class="img-responsive" alt="" />
+						<img src="@Url.Content("~/Content/mytemplate/")images/icon2.jpg" class="img-responsive" alt="" />
 					</div>
 					<div class="icon-data">
 						<h4>Fully Secure Payment</h4>
@@ -343,7 +338,7 @@
 				</div>
 				<div class="col-md-4 service-section-bottom-grid wow bounceIn " data-wow-delay="0.2s">
 					<div class="icon">
-						<img src="images/icon3.jpg" class="img-responsive" alt="" />
+						<img src="@Url.Content("~/Content/mytemplate/")images/icon3.jpg" class="img-responsive" alt="" />
 					</div>
 					<div class="icon-data">
 						<h4>Track Your Order</h4>
