--- a/OrderingFoodSystem/Views/Shared/_LoginTemplate.cshtml
+++ b/OrderingFoodSystem/Views/Shared/_LoginTemplate.cshtml
@@ -2,37 +2,38 @@
 
 <html>
 <head>
-	<meta name="viewport" content="width=device-width" />
+
 	<title>@ViewBag.Title</title>
-	<!--<title>Food_Template Bootstrap Responsive Website Template | Contact :: w3layouts</title> -->
+
+	<title>Food_Template Bootstrap Responsive Website Template | login page :: w3layouts</title>
 	<link href="@Url.Content("~/Content/mytemplate/")css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="js/jquery.min.js"></script>
+	<script src="@Url.Content("~/Content/mytemplate/")js/jquery.min.js"></script>
 	<!-- Custom Theme files -->
 	<link href="@Url.Content("~/Content/mytemplate/")css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- Custom Theme files -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!--webfont-->
-	<link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
-	<link href='//fonts.googleapis.com/css?family=Lobster+Two:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link href='@Url.Content("~/Content/mytemplate/")//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+	<link href='@Url.Content("~/Content/mytemplate/")//fonts.googleapis.com/css?family=Lobster+Two:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<!--Animation-->
-	<script src="js/wow.min.js"></script>
+	<script src="@Url.Content("~/Content/mytemplate/")js/wow.min.js"></script>
 	<link href="@Url.Content("~/Content/mytemplate/")css/animate.css" rel='stylesheet' type='text/css' />
 	<script>
-		new WOW().init();
+	new WOW().init();
 	</script>
-	<script type="text/javascript" src="js/move-top.js"></script>
-	<script type="text/javascript" src="js/easing.js"></script>
+	<script type="text/javascript" src="@Url.Content("~/Content/mytemplate/")js/move-top.js"></script>
+	<script type="text/javascript" src="@Url.Content("~/Content/mytemplate/")js/easing.js"></script>
 	<script type="text/javascript">
-		jQuery(document).ready(function ($) {
-			$(".scroll").click(function (event) {
-				event.preventDefault();
-				$('html,body').animate({ scrollTop: $(this.hash).offset().top }, 1200);
+			jQuery(document).ready(function($) {
+				$(".scroll").click(function(event){
+					event.preventDefault();
+					$('html,body').animate({scrollTop:$(this.hash).offset().top},1200);
+				});
 			});
-		});
 	</script>
-	<script src="js/simpleCart.min.js"></script>
+	<script src="@Url.Content("~/Content/mytemplate/")js/simpleCart.min.js"></script>
 </head>
 <body>
 	<div class="header">
@@ -42,7 +43,7 @@
 					<a href="index.html"><img src="@Url.Content("~/Content/mytemplate/")images/logo.png" class="img-responsive" alt="" /></a>
 				</div>
 				<div class="queries">
-					<p>Any Query? Call us !<span>01933818216/0152130997 </span><label>(11AM to 11PM)</label></p>
+					<p>Questions? Call us Toll-free!<span>1800-0000-7777 </span><label>(11AM to 11PM)</label></p>
 				</div>
 				<div class="header-right">
 					<div class="cart box_1">
@@ -61,11 +62,11 @@
 				<div class="top-menu">
 					<ul>
 						<li>@Html.ActionLink("Home", "Index", "Home")</li>
+						<li>@Html.ActionLink("Popular Restaurants", "Index", "Restaurantls")</li>
 						<!--<li><a href="index.html">Home</a></li>|-->
-						<li>@Html.ActionLink("Popular Restaurants", "Index", "Restaurantls")</li>|
+						<!--<li class="active"><a href="restaurants.html">Popular Restaurants</a></li>|-->
 						<li><a href="order.html">Order</a></li>|
 						<li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-						<!--<li class="active"><a href="#contact" class="scroll">contact</a></li>-->
 						<div class="clearfix"></div>
 					</ul>
 				</div>
@@ -81,8 +82,9 @@
 				<div class="clearfix"></div>
 			</div>
 		</div>
-		<div>
-			@RenderBody()
-		</div>
+	</div>
+	<div>
+		@RenderBody()
+	</div>
 </body>
 </html>
