--- a/OrderingFoodSystem/Views/Shared/_mytemplate.cshtml
+++ b/OrderingFoodSystem/Views/Shared/_mytemplate.cshtml
@@ -59,8 +59,8 @@
 			<div class="container">
 				<div class="top-menu">
 					<ul>
-						<li class="active"><a href="#Home" class="scroll">Home</a></li>|
-						<li><a href="restaurants.html">Popular Restaurants</a></li>|
+						<li>@Html.ActionLink("Home", "Index", "Home")</li>|
+						<li>@Html.ActionLink("Popular Restaurants", "Index", "Restaurantls")</li>|
 						<li><a href="order.html">Order</a></li>|
 						<li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 						<!--<li><a href="contact.html">contact</a></li> -->
