--- a/OrderingFoodSystem/Views/Restaurantls/Index.cshtml
+++ b/OrderingFoodSystem/Views/Restaurantls/Index.cshtml
@@ -74,7 +74,7 @@
 							<!--@Html.ActionLink("Details", "Details", new { id = item.RestaurantID }) |-->
 							<div class="col-md-7 buy">
 
-								<a class="morebtn hvr-rectangle-in" href="orders-list.html">Enter</a>
+								<a class="morebtn hvr-rectangle-in" href="/Home/Item">Enter</a>
 							</div>
 
 
