--- a/OrderingFoodSystem/Views/Home/Login.cshtml
+++ b/OrderingFoodSystem/Views/Home/Login.cshtml
@@ -5,41 +5,48 @@
     Layout = "~/Views/Shared/_LoginTemplate.cshtml";
 }
 
-<h2>Login</h2>
+
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Registration</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-            </div>
-        </div>
+<div class="form-horizontal">
+	<div>
+		<p style="padding-top: 0.5cm">
+			<h2><hr /><b>Sign In</b></h2>
+		</p>
+	</div>
+	
+	<hr />
+	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+		<div class="col-md-6">
+			@Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+		</div>
+	</div>
+
+	<div class="form-group">
+		@Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+		<div class="col-md-6">
+			@Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+		</div>
+	</div>
 
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
+	<div class="form-group">
+		<div class="col-md-offset-2 col-md-10">
+			<input type="submit" value="Create" class="btn btn-default" />
+		</div>
+	</div>
+</div>
 }
+
+
 
 <div>
     @Html.ActionLink("Back to List", "Index")
