--- a/OrderingFoodSystem/Views/Shared/ItemTemp.cshtml
+++ b/OrderingFoodSystem/Views/Shared/ItemTemp.cshtml
@@ -39,7 +39,7 @@
 		<div class="container">
 			<div class="top-header">
 				<div class="logo">
-					<a href="index.html"><img src="@Url.Content("~/Content/mytemplate/")images/logo.png" class="img-responsive" alt="" /></a>
+					<a href="/Home/OrderInformation"><img src="@Url.Content("~/Content/mytemplate/")images/logo.png" class="img-responsive" alt="" /></a>
 				</div>
 				<div class="queries">
 					<p>Any Query? Call us !<span>01933818216/0152130997 </span><label>(11AM to 11PM)<label></p>
@@ -47,7 +47,7 @@
 				<div class="header-right">
 					<div class="cart box_1">
 						<a href="/Home/OrderInformation">
-							<h3> <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span> items)<img src="images/bag.png" alt=""></h3>
+							<h3> <span class="simpleCart_total"> 0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span> items)<img src="images/bag.png" alt=""></h3>
 						</a>
 						<p><a href="javascript:;" class="simpleCart_empty">Empty card</a></p>
 						<div class="clearfix"> </div>
@@ -70,9 +70,7 @@
 					</ul>
 				</div>
 				<div class="login-section">
-					<ul>
-						
-					</ul>
+					
 				</div>
 				<div class="clearfix"></div>
 			</div>
@@ -84,3 +82,4 @@
 	</div>
 </body>
 </html>
+
