--- a/OrderingFoodSystem/Views/Shared/OrderTemplate.cshtml
+++ b/OrderingFoodSystem/Views/Shared/OrderTemplate.cshtml
@@ -46,7 +46,7 @@
 				</div>
 				<div class="header-right">
 					<div class="cart box_1">
-						<a href="/Home/OrderInformation">
+						<a href="checkout.html">
 							<h3> <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span> items)<img src="images/bag.png" alt=""></h3>
 						</a>
 						<p><a href="javascript:;" class="simpleCart_empty">Empty card</a></p>
@@ -70,9 +70,7 @@
 					</ul>
 				</div>
 				<div class="login-section">
-					<ul>
-						
-					</ul>
+					<ul></ul>
 				</div>
 				<div class="clearfix"></div>
 			</div>
