--- a/OrderingFoodSystem/Views/Shared/_mytemplate.cshtml
+++ b/OrderingFoodSystem/Views/Shared/_mytemplate.cshtml
@@ -60,8 +60,8 @@
 				<div class="top-menu">
 					<ul>
 						<li>@Html.ActionLink("Home", "Index", "Home")</li>|
-						<li>@Html.ActionLink("Popular Restaurants", "Index", "Restaurantls")</li>|
-						<li><a href="order.html">Order</a></li>|
+						<li>@Html.ActionLink("Popular Restaurants", "Register", "Home")</li>|
+						
 						<li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 						<!--<li><a href="contact.html">contact</a></li> -->
 						<div class="clearfix"></div>
